--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,12 +13,10 @@
         android:theme="@style/Theme.MyAppG2"
         tools:targetApi="31">
         <activity
-            android:name=".SplashActivity"
+            android:name=".SignupActivity"
             android:exported="false" />
-        <activity android:name=".MainActivity" />
-        <activity android:name=".DashboardActivity" />
         <activity
-            android:name=".LoginActivity"
+            android:name=".SplashActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -26,6 +24,11 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".MainActivity" />
+        <activity android:name=".DashboardActivity" />
+        <activity
+            android:name=".LoginActivity"
+            android:exported="true"></activity>
     </application>
 
 </manifest>
